Header scroll animation effect

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,12 @@
     <script src="bower_components/medium-editor/dist/js/medium-editor.js"></script>
     <script src="bower_components/angular-medium-editor/dist/angular-medium-editor.js"></script>
     <script src="bower_components/ng-img-crop-full-extended/compile/minified/ng-img-crop.js"></script>
+    <script src="bower_components/headroom.js/dist/headroom.js"></script>
+    <script src="bower_components/headroom.js/dist/headroom.min.js"></script>
+    <script src="bower_components/headroom.js/dist/jQuery.headroom.js"></script>
+    <script src="bower_components/headroom.js/dist/jQuery.headroom.min.js"></script>
+    <script src="bower_components/headroom.js/dist/angular.headroom.js"></script>
+    <script src="bower_components/headroom.js/dist/angular.headroom.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
