--- a/client/app/main/interviews/interview.html
+++ b/client/app/main/interviews/interview.html
@@ -1,3 +1,5 @@
+<div cg-busy="{promise:$root.activePromises,message:'Loading',backdrop:true ,delay:10,minDuration:1000}"></div>
+
 <navbar></navbar>
 <section class="hero">
     <div class="hero_innerbox">
