--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="bower_components/medium-editor/dist/css/medium-editor.css" />
     <link rel="stylesheet" href="bower_components/medium-editor/dist/css/themes/default.css" />
     <link rel="stylesheet" href="bower_components/ng-img-crop-full-extended/compile/minified/ng-img-crop.css" />
+    <link rel="stylesheet" href="bower_components/angular-busy-plus/dist/angular-busy.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -63,6 +64,8 @@
     <script src="bower_components/headroom.js/dist/jQuery.headroom.min.js"></script>
     <script src="bower_components/headroom.js/dist/angular.headroom.js"></script>
     <script src="bower_components/headroom.js/dist/angular.headroom.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-busy-plus/dist/angular-busy.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -110,6 +113,7 @@
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="components/navbar/navbar.directive.js"></script>
     <script src="components/util/util.directive.js"></script>
+    <script src="components/util/util.factory.js"></script>
     <script src="app/animals/crud-animal/animal-edit.controller.js"></script>
     <script src="components/util/util.service.js"></script>
     <!-- endinjector -->
