Add sidebar info

--- a/client/app/main/home/main.html
+++ b/client/app/main/home/main.html
@@ -1,5 +1,9 @@
-<div cg-busy="{promise:$root.activePromises,message:'Loading',backdrop:true ,delay:10,minDuration:1000}"></div>
-
+<div cg-busy="{promise:$root.activePromises,message:'Loading',backdrop:true ,delay:10,minDuration:4000}"></div>
+<div class="side">
+    <div class="side__left">
+        <p>The Paw Collective</p>
+    </div>
+</div>
 <navbar></navbar>
 <section class="hero">
     <div class="hero_innerbox">
