Add featured interview module on homepage

--- a/client/app/main/home/main.html
+++ b/client/app/main/home/main.html
@@ -10,12 +10,39 @@
     </div>
     <div class="hero_title">
         <h1>The Paw Collective</h1>
-        <p>collection of
-            <br> famous dogs</p>
+        <p>interviews & collection <br>of
+            famous dogs</p>
     </div>
 </section>
 <section class="collective">
     <div class="container">
+    
+        <div class="subtitle_box">
+            <p>Interviews</p>
+        </div>
+
+        <div class="featured_interviews">
+            <div class="featured_interviews__items">
+                <div class="featured_interviews__items--banner" style="background-image:url('../../assets/images/interview_1.jpg')"></div>
+                <article class="featured_interviews__items--article">
+                    <h1>Bringing up Bella</h1>
+                    <p>And while I am grateful for the friendships we've made, amazed by all the other pet lovers and bloggers we've discovered and so very humbled by the trust other scared-y dog owners have put in us, I am also more than a little exhausted by the amount of effort it takes to keep "it all" going.</p>
+                </article>
+            </div>
+            <div class="featured_interviews__items">
+                <div class="featured_interviews__items--banner" style="background-image:url('../../assets/images/interview_2.jpg')"></div>
+                <article class="featured_interviews__items--article">
+                    <h1>Life with Desmond</h1>
+                    <p>And while I am grateful for the friendships we've made, amazed by all the other pet lovers and bloggers we've discovered and so very humbled by the trust other scared-y dog owners have put in us, I am also more than a little exhausted by the amount of effort it takes to keep "it all" going.</p>
+                </article>
+            </div>
+        </div>
+
+        <div class="seperator"></div>
+        <div class="subtitle_box">
+            <p>Animals</p>
+        </div>
+        
         <div class="filter_wrapper">
             <div class="form-select">
                 <select name="" id="">
