--- a/client/index.html
+++ b/client/index.html
@@ -115,6 +115,7 @@
     <script src="components/navbar/navbar.directive.js"></script>
     <script src="components/util/util.directive.js"></script>
     <script src="components/util/util.factory.js"></script>
+    <script src="components/util/util.filter.js"></script>
     <script src="app/animals/crud-animal/animal-edit.controller.js"></script>
     <script src="components/util/util.service.js"></script>
     <!-- endinjector -->
