--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
 
 <body ng-app="animalCollectiveApp">
 <!--     <navbar></navbar>
- -->    <div ng-view=""></div>
+ -->    <div ng-view="" class="fader"></div>
 <!--     <footer></footer>
  -->
     <script>
