--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html>
 <head>
+    <!------------------------------------------------------------------------------
+
+                                The Pw Collective
+                            http://thepwcollective.com
+                              
+                                       *
+                        
+                                Made In Pri, Frnce
+
+    ------------------------------------------------------------------------------->
+
+
+    <!-- Commence. -->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
@@ -25,7 +38,7 @@
 
 <body ng-app="animalCollectiveApp">
 <!--     <navbar></navbar>
- -->    <div ng-view="" class="fader"></div>
+ -->    <div ng-view="" class="fader" autoscroll="true"></div>
 <!--     <footer></footer>
  -->
     <script>
