Improve loading module

--- a/client/app/main/home/main.html
+++ b/client/app/main/home/main.html
@@ -1,4 +1,5 @@
-<!-- <div cg-busy="{promise:$root.activePromises,message:'Loading',backdrop:true ,delay:10,minDuration:4000}"></div> -->
+<div class="tpc_busy" cg-busy="{promise:$root.activePromises}">
+
 <div class="side">
     <div class="side__left">
         <p>The Paw Collective</p>
@@ -62,3 +63,5 @@
         </div>
     </div>
 </section>
+
+</div>
