--- a/client/app/main/interview/interview.html
+++ b/client/app/main/interview/interview.html
@@ -1,3 +1,5 @@
+<div class="tpc_busy" cg-busy="{promise:$root.activePromises}">
+
 <navbar></navbar>
 <section class="hero" style="background-image:url('{{interview.idata.images[0].animal}}')"></section>
 <section class="interview_main">
@@ -16,3 +18,5 @@
         </div>
     </div>
 </section>
+
+</div>
