--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,12 @@
 <head>
     <!------------------------------------------------------------------------------
 
-                                The Pw Collective
-                            http://thepwcollective.com
+                                The Paw Collective
+                            http://thepawcollective.com
                               
                                        *
                         
-                                Made In Pri, Frnce
+                                Made In Paris, Frnce
 
     ------------------------------------------------------------------------------->
 
@@ -38,7 +38,10 @@
 
 <body ng-app="animalCollectiveApp">
 <!--     <navbar></navbar>
- -->    <div ng-view="" class="fader" autoscroll="true"></div>
+ -->    
+
+ <div ng-view="" class="fader" autoscroll="true"></div>
+
 <!--     <footer></footer>
  -->
     <script>
