--- a/client/app/main/interviews/interviews.html
+++ b/client/app/main/interviews/interviews.html
@@ -1,12 +1,5 @@
 <div cg-busy="{promise:$root.activePromises,message:'Loading',backdrop:true ,delay:10,minDuration:1000}"></div>
 
 <navbar></navbar>
-<section class="hero">
-    <div class="hero_innerbox">
-    </div>
-    <div class="hero_title">
-        <h1>The Paw Collective</h1>
-        <p>collection of
-            <br> famous dogs</p>
-    </div>
+<footer-main></footer-main>
 </section>
