Integrate PhantomJS to render for SEO

--- a/client/app/main/interviews/interviews.html
+++ b/client/app/main/interviews/interviews.html
@@ -1,4 +1,4 @@
-<div cg-busy="{promise:$root.activePromises,message:'Loading',backdrop:true ,delay:10,minDuration:1000}"></div>
+<div cg-busy="{promise:$root.activePromises}"></div>
 
 <navbar></navbar>
 <footer-main></footer-main>
