Facebook & Twitter share icon integration

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,6 @@
 
     ------------------------------------------------------------------------------->
 
-
     <!-- Commence. -->
     <meta name="fragment" content="!">
     <meta charset="utf-8">
@@ -22,10 +21,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <!-- OG. -->
+    <!-- Open Graph Server Rendered -->
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="" />
-    <meta property="og:description"        content="" />
+    <meta property="og:title"              content="{{title}}" />
+    <meta property="og:description"        content="{{description}}" />
     <meta property="og:image"              content="" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
