Dynamic meta tag tags fo SEO setup

--- a/client/app/main/home/main.html
+++ b/client/app/main/home/main.html
@@ -1,3 +1,5 @@
+<update-title title="The Paw Collective"></update-title>
+
 <div class="tpc_busy" cg-busy="{promise:$root.activePromises}">
     <div class="side">
         <div class="side__left">
