--- a/client/app/main/interview/interview.html
+++ b/client/app/main/interview/interview.html
@@ -1,7 +1,7 @@
+<update-title title="The Paw Collective - {{interview.idata.title}}"></update-title>
+
 <div class="tpc_busy" cg-busy="{promise:$root.activePromises}">
     <navbar></navbar>
-    <!--     <section class="hero" style="background-image:url('{{interview.idata.images[0].animal}}')"></section>
- -->
     <section class="interview_main">
         <div class="container">
             <div class="interview_main_hero" style="background-image:url('{{interview.idata.images[0].animal}}')"></div>
