--- a/client/app/main/home/main.html
+++ b/client/app/main/home/main.html
@@ -12,8 +12,7 @@
         </div>
         <div class="hero_title">
             <h1>The Paw Collective</h1>
-            <p>interviews & collection
-                <br>of famous dogs</p>
+            <p>interviews & instagram <br>accounts of famous dogs</p>
         </div>
     </section>
     <section class="collective">
