--- a/client/app/back/animals/crud-animal/animal.html
+++ b/client/app/back/animals/crud-animal/animal.html
@@ -4,7 +4,13 @@
         <div class="create-edit-box-wrapper">
             <!-- Left Box -->
             <div class="create-edit-box-left">
-                <form-component file="adminAnimal.file" id="adminAnimal.id" data="adminAnimal.animal" formtype="adminAnimal.formType" category="adminAnimal.animalCategory"></form-component>
+                <form-component 
+                    file="adminAnimal.file" 
+                    id="adminAnimal.id" 
+                    data="adminAnimal.animal" 
+                    formtype="adminAnimal.formType" 
+                    category="adminAnimal.animalCategory">        
+                </form-component>
             </div>
             <!-- Right Box -->
             <div class="create-animal-box-right portrait">
