--- a/client/index.html
+++ b/client/index.html
@@ -125,6 +125,7 @@
     <script src="components/auth/router.decorator.js"></script>
     <script src="components/auth/user.service.js"></script>
     <script src="components/footer/footer.directive.js"></script>
+    <script src="components/form/form-interview.directive.js"></script>
     <script src="components/form/form.directive.js"></script>
     <script src="components/image-upoad/image-upload.service.js"></script>
     <script src="components/mongoose-error/mongoose-error.directive.js"></script>
